# sit-wechat-bot

./: .gitignore  README.md  main.py  pyproject.toml
config/: wcf_agent.yaml  wcf_dispatcher.yaml
src/bot_core/: __init__.py  config.py
src/common/: agent.py  message_handler.py  wcf.py
src/wcferry_agent/: __init__.py
src/wcferry_mcp_server/: __init__.py
src/wcferry_message_dispatcher/: config.py
src/wcferry_message_handler/: __init__.py  config.py
src/wcferry_sdk/: __init__.py  config.py  wcferry_sdk_loader.py
src/wechat_agent/: __init__.py  config.py  wcferry_sdk_loader.py
wcf_agent/: main.py
