[project]
name = "sit-wechat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.2",
    "wcferry>=39.4.2.2",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
package = true

[project.scripts]
wcferry-agent = "wcferry_agent:main"
wcferry-mcp-server = "wcferry_mcp_server:main"
wcferry-message-gateway = "wcferry_message_gateway:main"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/*"]
